<resources>
    <string name="app_name">Sunday</string>
    <string name="contributions_credits"><![CDATA[Contributions & Credits]]></string>
    <string name="terms_policies"><![CDATA[Terms & Policies]]></string>
    <string name="notification">Notifications</string>
    <string name="instructions_string">Instructions</string>
    <string name="latency">Latency</string>
   <string-array name="latency_selection">
       <item>10 mins</item>
       <item>30 mins</item>
       <item>1 hr</item>
       <item>3 hrs</item>
   </string-array>
    </resources>